@@ -112,14 +112,15 @@ public abstract class AbstractNodeExecutor implements Executor {
 
       // Try to delete the symbolic link in case a dangling link is present
       try {
-        Process process = Runtime.getRuntime().exec("unlink " + hdfsBinaryPath);
+        ProcessBuilder processBuilder = new ProcessBuilder("unlink", hdfsBinaryPath);
+        Process process = processBuilder.start();
         redirectProcess(process);
         int exitCode = process.waitFor();
         if (exitCode != 0) {
           log.info("Unable to unlink old sym link. Link may not exist. Exit code: " + exitCode);
         }
       } catch (IOException e) {
-        log.fatal("Could not unlink" + hdfsBinaryPath + ": " + e);
+        log.fatal("Could not unlink " + hdfsBinaryPath + ": " + e);
         System.exit(1);
       }
 
@@ -146,7 +147,7 @@ public abstract class AbstractNodeExecutor implements Executor {
    * requires that /usr/bin/ is on the Mesos slave PATH, which is defined as part of the standard
    * Mesos slave packaging.
    **/
-  private void addBinaryToPath(String hdfsBinaryPath) throws IOException {
+  private void addBinaryToPath(String hdfsBinaryPath) throws IOException, InterruptedException {
     if (schedulerConf.usingNativeHadoopBinaries())
       return;
     String pathEnvVarLocation = "/usr/bin/hadoop";
@@ -155,7 +156,14 @@ public abstract class AbstractNodeExecutor implements Executor {
     BufferedWriter bufferedWriter = new BufferedWriter(fileWriter);
     bufferedWriter.write(scriptContent);
     bufferedWriter.close();
-    Runtime.getRuntime().exec("chmod a+x " + pathEnvVarLocation);
+    ProcessBuilder processBuilder = new ProcessBuilder("chmod", "a+x", pathEnvVarLocation);
+    Process process = processBuilder.start();
+    int exitCode = process.waitFor();
+    if (exitCode != 0) {
+      log.fatal("Error creating the symbolic link to hdfs binary."
+          + "Failure running 'chmod a+x " + pathEnvVarLocation + "'");
+      System.exit(1);
+    }
   }
 
   /**
@@ -163,16 +171,15 @@ public abstract class AbstractNodeExecutor implements Executor {
    **/
   protected void startProcess(ExecutorDriver driver, Task task) {
     reloadConfig();
-    Process process = task.process;
-    if (process == null) {
+    if (task.process == null) {
       try {
-        process = Runtime.getRuntime().exec(new String[]{
-            "sh", "-c", task.cmd});
-        redirectProcess(process);
+        ProcessBuilder processBuilder = new ProcessBuilder("sh", "-c", task.cmd);
+        task.process = processBuilder.start();
+        redirectProcess(task.process);
       } catch (IOException e) {
-        log.fatal(e);
+        log.error(e);
+        task.process.destroy();
         sendTaskFailed(driver, task);
-        System.exit(2);
       }
     } else {
       log.error("Tried to start process, but process already running");
@@ -197,13 +204,17 @@ public abstract class AbstractNodeExecutor implements Executor {
     }
     try {
       log.info(String.format("Reloading hdfs-site.xml from %s", configUri));
-      String cfgCmd[] = new String[]{"sh", "-c",
-          String.format("curl -o hdfs-site.xml %s ; cp hdfs-site.xml etc/hadoop/", configUri)};
-      Process process = Runtime.getRuntime().exec(cfgCmd);
+      ProcessBuilder processBuilder = new ProcessBuilder("sh", "-c",
+          String.format("curl -o hdfs-site.xml %s && cp hdfs-site.xml etc/hadoop/", configUri));
+      Process process = processBuilder.start();
       //TODO(nicgrayson) check if the config has changed
       redirectProcess(process);
       int exitCode = process.waitFor();
-      log.info("Finished reloading hdfs-site.xml, exited with status " + exitCode);
+      if (exitCode == 0) {
+        log.info("Finished reloading hdfs-site.xml, exited with status " + exitCode);
+      } else {
+        log.error("Error reloading hdfs-site.xml.");
+      }
     } catch (InterruptedException | IOException e) {
       log.error("Caught exception", e);
     }
@@ -226,18 +237,21 @@ public abstract class AbstractNodeExecutor implements Executor {
     reloadConfig();
     try {
       log.info(String.format("About to run command: %s", command));
-      Process init = Runtime.getRuntime().exec(new String[]{"sh", "-c", command});
+      ProcessBuilder processBuilder = new ProcessBuilder("sh", "-c", command);
+      Process init = processBuilder.start();
       redirectProcess(init);
       int exitCode = init.waitFor();
-      log.info("Finished running command, exited with status " + exitCode);
-      if (exitCode != 0) {
-        log.fatal("Unable to run command: " + command);
+      if (exitCode == 0) {
+        log.info("Finished running command, exited with status " + exitCode);
+      } else {
+        log.error("Unable to run command: " + command);
+        task.process.destroy();
         sendTaskFailed(driver, task);
-        System.exit(1);
       }
     } catch (InterruptedException | IOException e) {
-      log.fatal(e);
-      System.exit(1);
+      log.error(e);
+      task.process.destroy();
+      sendTaskFailed(driver, task);
     }
   }
 
@@ -278,12 +292,6 @@ public abstract class AbstractNodeExecutor implements Executor {
     log.error(this.getClass().getName() + ".error: " + message);
   }
 
-  @Override
-  public void shutdown(ExecutorDriver d) {
-    // TODO(elingg) let's shut down the driver more gracefully
-    log.info("Executor asked to shutdown");
-  }
-
   /**
    * The task class for use within the executor
    **/
@@ -299,5 +307,4 @@ public abstract class AbstractNodeExecutor implements Executor {
           cmd));
     }
   }
-
 }
